chore: Update dependencies and add configuration files

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,7 @@
     --chart-2: 186 71% 44%;
     --chart-3: 36 99% 47%;
     --chart-4: 108 100% 35%;
+    --chart-5: 0 100% 50%;
   }
 
   /* brandwhite: "#FAFDF6",
