Settings updated, Help center layout created

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,13 @@
 .no-focus {
   @apply focus-visible:ring-0  focus-visible:ring-offset-0 !important;
 }
+
+.markdown > * {
+  all: revert;
+}
+
+@media screen and (max-width: 640px) {
+  .markdown {
+    font-size: 10px !important;
+  }
+}
